# Language-complexity-in-multilingual-language-models

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.yaml  data.dvc  docker-compose.yaml  docker-compose.yml  infer.py  pyproject.toml  requirements.txt  start.sh  train.py
utils/: correlation_analysis.py  evaluation.py  load_dataset.py  metrics.py
