[tool.poetry]
name = "Language-complexity-in-multilingual-language-models"
version = "0.1.0"
description = "This work will help to gain more knowledge about BERT's hidden states and explore the connections between the model prediction process in different languages. This knowledge is useful for transferring learning to low-resource languages."
authors = ["Kapelushnikov Andrey"]

[tool.poetry.dependencies]
python = "~3.11"

[tool.poetry.dev-dependencies]
pre-commit = "^3.6.0"
pytest = "^7.4.4"
black = "^24.3.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
flake8-bugbear = "^23.3.0"
Flake8-pyproject = "^1.7.0"

[tool.black]
line-length = 90
target-version = ['py311']

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.flake8]
max-line-length = 90
exclude = "__init__.py"
select = ["E", "W", "F", "C", "B", "B950"]
ignore = ["E501", "W503"]
per-file-ignores = [
    "__init__.py:F401",
]

[tool.nbqa.mutate]
black = 1
isort = 1
flake8 = 0

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "pyproject.toml"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
